[package]
name = "rate-limiting-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.39", features = ["derive"] }
pingora = { version = "0.5.0", features = ["proxy"] }
redis = { version = "0.31.0", features = ["aio", "tokio-comp", "sentinel", "connection-manager", "script"] }
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
